# InstanceHidingGC

./: CMakeLists.txt  README.txt
include/circuit/: circuit.h  circuit_file_reader.h  gate.h  ttable.h
include/common/: binary.h
include/evaluator/: evaluator.h
include/garbler/: garbler.h  random.h
include/network/: server.h
scripts/: add.sh  benchmark.sh  bin2dec.sh  bin2hex.sh  create_circuit.sh  dec2bin.sh  hex2bin.sh
src/circuit/: circuit.cpp  circuit_file_reader.cpp  gate.cpp  ttable.cpp
src/common/: binary.cpp
src/evaluator/: evaluator.cpp
src/garbler/: garbler.cpp  random.cpp
src/network/: server.cpp
src/tests/: aes.cpp  run.cpp
